--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "sass": "^1.79.4",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2"
